--- a/src/app/pages/club/show-club/show-club.page.html
+++ b/src/app/pages/club/show-club/show-club.page.html
@@ -56,10 +56,8 @@
             <ion-col size="1 "> </ion-col>
             <ion-col size="4 ">
                 <ion-row class="ion-justify-content-end ">
-                    <ion-button *ngIf="currentSubscription else isNotMember " size="large " style="width: 60%" [disabled]="true">Already signed up</ion-button>
-                    <ng-template #isNotMember>
-                        <ion-button size="large " class="signUpButton " (click)="showModal()" [disabled]="!club.clubsubscription.length">Sign up</ion-button>
-                    </ng-template>
+                    <ion-button size="large " style="width: 60%" [style.--background]="(currentSubscription) ? '#43B3C3': '#70ad47'" [disabled]="currentSubscription || !(club$ | async)?.clubByID.clubsubscription.length" (click)="showModal()">{{buttonText}}</ion-button>
+
                 </ion-row>
                 <div class="textContainer ">
                     <ion-col class="ion-text-end ">
@@ -168,5 +166,5 @@
             </ion-col>
         </ion-grid>
     </ion-content>
-    <app-mobile-signup-component [text]=" !currentSubscription ? 'Sign up' : 'Already signed up'" [color]="(currentSubscription) ? '#43B3C3': '#70ad47'" [disabled]="currentSubscription || !(club$ | async)?.clubByID.clubsubscription.length" [callback]="showModal "></app-mobile-signup-component>
+    <app-mobile-signup-component [text]="buttonText" [color]="(currentSubscription) ? '#43B3C3': '#70ad47'" [disabled]="currentSubscription || !(club$ | async)?.clubByID.clubsubscription.length" [callback]="showModal "></app-mobile-signup-component>
 </ng-template>
