added some styling to event

--- a/src/app/pages/event/event-list/event-list.page.scss
+++ b/src/app/pages/event/event-list/event-list.page.scss
@@ -1,13 +1,13 @@
-.searchButton {
-  margin-top: 12px;
+.goToEventButton {
+    align-self: flex-end;
 }
 
 ion-list {
-  background-color: #76c5f0;
-  margin-top: -8px;
+    background-color: #76c5f0;
+    margin-top: -8px;
 }
 
 ion-card {
-  --color: black;
-  --background: rgb(250, 250, 250);
+    --color: black;
+    --background: rgb(250, 250, 250);
 }
