--- a/src/app/pages/event/event-list/event-list.page.html
+++ b/src/app/pages/event/event-list/event-list.page.html
@@ -12,12 +12,14 @@
                 <ion-card-title>{{event.name.toUpperCase()}}</ion-card-title>
                 <ion-card-subtitle>
                     <ion-row class="ion-justify-content-between">
-                        <ion-text style="margin-top: 1rem"> Event Price </ion-text>
-                        <ion-button class="goToClubButton" [routerLink]="route(event.eventId)">Go to event</ion-button>
+                        <ion-label>Club: {{event.club.name}}</ion-label>
+                        <ion-button [routerLink]="route(event.eventId)">Go to event</ion-button>
                     </ion-row>
                 </ion-card-subtitle>
             </ion-card-header>
-            <ion-card-content> {{event.description}} </ion-card-content>
+            <ion-card-content>
+                <ion-label>Description: {{event.description}}</ion-label>
+            </ion-card-content>
         </ion-card>
     </ion-list>
 </ion-content>
