--- a/src/app/pages/club/show-club/show-club.page.html
+++ b/src/app/pages/club/show-club/show-club.page.html
@@ -39,11 +39,11 @@
                             <p>Upcoming events in the club</p>
                         </ion-list-header>
                         <hr style="height: 1px; background-color: black; width: 90% " />
-                        <ion-item class="substyle ion-justify-content-evenly " *ngFor=" let event of (club$ | async)?.eventsForClub; index as i ">
+                        <ion-item button (click)="goToEvent(event.eventId)" class="substyle ion-justify-content-evenly " *ngFor=" let event of (club$ | async)?.eventsForClub; index as i ">
                             <ion-grid>
                                 <ion-card>
                                     <ion-card-header>
-                                        <ion-row (click)="goToEvent(event.eventId)" class="ion-justify-content-between ">
+                                        <ion-row class="ion-justify-content-between ">
                                             <ion-text>{{event.name}}</ion-text>
                                         </ion-row>
                                     </ion-card-header>
@@ -124,13 +124,14 @@
                         <p>Upcoming events in the club</p>
                     </ion-list-header>
                     <hr style="height: 1px; background-color: black; width: 90% " />
-                    <ion-item class="substyle ion-justify-content-evenly " *ngFor="let event of  events; index as i ">
+                    <ion-item button (click)="goToEvent(event.eventId)" class="substyle ion-justify-content-evenly " *ngFor="let event of  events; index as i ">
                         <ion-grid>
-                            <ion-row (click)="goToEvent(event.eventId)" class="ion-justify-content-between ">
+                            <ion-row class="ion-justify-content-between ">
                                 <ion-label>{{event.name}}</ion-label>
                             </ion-row>
                         </ion-grid>
                     </ion-item>
+
                 </ion-list>
             </ion-row>
             <ion-card>
