--- a/src/app/pages/event/event-list/event-list.page.html
+++ b/src/app/pages/event/event-list/event-list.page.html
@@ -1,25 +1,35 @@
-<ion-row class="ion-justify-content-around ion-margin">
-    <ion-col size="12">
+<ion-row class="ion-margin">
+    <ion-col size-lg="6" offset="3">
         <ion-searchbar [(ngModel)]="searchQuery" (ngModelChange)="didSearch($event)" inputmode="text" animated placeholder="Search"></ion-searchbar>
     </ion-col>
 </ion-row>
 
 <ion-content>
-    <ion-header style="padding-left:30px;" *ngIf="filteredEvents.length == 0 && events.length > 0">No events matching the searchquery</ion-header>
-    <ion-list *ngFor="let event of filteredEvents">
-        <ion-card>
-            <ion-card-header>
-                <ion-card-title>{{event.name.toUpperCase()}}</ion-card-title>
-                <ion-card-subtitle>
-                    <ion-row class="ion-justify-content-between">
-                        <ion-label>Club: {{event.club.name}}</ion-label>
-                        <ion-button [routerLink]="route(event.eventId)">Go to event</ion-button>
-                    </ion-row>
-                </ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content>
-                <ion-label>Description: {{event.description}}</ion-label>
-            </ion-card-content>
-        </ion-card>
-    </ion-list>
+    <ion-grid>
+        <ion-row>
+            <ion-col size-lg="6" offset="3">
+                <ion-header *ngIf="filteredEvents.length == 0 && events.length > 0">No events matching the searchquery</ion-header>
+                <ion-list lines="none" *ngFor="let event of filteredEvents">
+                    <ion-item [routerLink]="route(event.eventId)">
+                        <ion-card class="card">
+                            <ion-card-header>
+                                <ion-card-title>{{event.name.toUpperCase()}}</ion-card-title>
+                                <ion-card-subtitle>
+                                    <ion-row class="ion-justify-content-between">
+                                        <ion-label>Club: {{event.club.name}}</ion-label>
+                                    </ion-row>
+                                </ion-card-subtitle>
+                                <ion-card-subtitle>
+                                    Start: {{event.startTime | date:'short'}} End: {{event.endTime | date:'short'}}
+                                </ion-card-subtitle>
+                            </ion-card-header>
+                            <ion-card-content>
+                                <ion-label>Description: {{event.description}}</ion-label>
+                            </ion-card-content>
+                        </ion-card>
+                    </ion-item>
+                </ion-list>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
