--- a/src/app/pages/event/event-list/event-list.page.scss
+++ b/src/app/pages/event/event-list/event-list.page.scss
@@ -2,12 +2,7 @@
     align-self: flex-end;
 }
 
-ion-list {
-    background-color: #76c5f0;
-    margin-top: -8px;
-}
-
-ion-card {
-    --color: black;
-    --background: rgb(250, 250, 250);
+.card {
+    background: whitesmoke;
+    width: 100%;
 }
