--- a/src/app/pages/event/event-page/event-page.page.scss
+++ b/src/app/pages/event/event-page/event-page.page.scss
@@ -1,27 +1,16 @@
 .boxed {
-  border: 1px solid black;
-  height: 100%;
-  width: 100%;
-  font-size: x-large;
-  padding: 1rem;
+    border: 1px solid black;
+    height: 100%;
+    width: 100%;
+    font-size: x-large;
+    padding: 1rem;
 }
 
-.signUpButton {
-  width: 100%;
-  --background: #70ad47;
-}
-
-.verifyButton {
-  width: 100%;
-  --background: #43b3c3;
+.button {
+    width: 100%;
 }
 
 .heading {
-  font-size: xx-large;
-  font-weight: 400;
-}
-
-.verifyButton {
-  width: 100%;
-  --background: #43b3c3;
+    font-size: xx-large;
+    font-weight: 400;
 }
