--- a/src/app/pages/club/club-list/club-list.page.scss
+++ b/src/app/pages/club/club-list/club-list.page.scss
@@ -1,13 +1,8 @@
 .searchButton {
-  margin-top: 12px;
+    margin-top: 12px;
 }
 
-ion-list {
-  background-color: #76c5f0;
-  margin-top: -8px;
-}
-
-ion-card {
-  --color: black;
-  --background: rgb(250, 250, 250);
+.card {
+    background: #0e58d84f;
+    width: 100%;
 }
