--- a/src/app/pages/event/event-list/event-list.page.html
+++ b/src/app/pages/event/event-list/event-list.page.html
@@ -1,5 +1,5 @@
 <ion-row class="ion-margin">
-    <ion-col size-lg="6" offset="3">
+    <ion-col size-lg="6" offset-lg="3">
         <ion-searchbar [(ngModel)]="searchQuery" (ngModelChange)="didSearch($event)" inputmode="text" animated placeholder="Search"></ion-searchbar>
     </ion-col>
 </ion-row>
@@ -7,7 +7,7 @@
 <ion-content>
     <ion-grid>
         <ion-row>
-            <ion-col size-lg="6" offset="3">
+            <ion-col size-lg="6" offset-lg="3">
                 <ion-header *ngIf="filteredEvents.length == 0 && events.length > 0">No events matching the searchquery</ion-header>
                 <ion-list lines="none" *ngFor="let event of filteredEvents">
                     <ion-item [routerLink]="route(event.eventId)">
