--- a/src/app/pages/event/event-page/event-page.page.html
+++ b/src/app/pages/event/event-page/event-page.page.html
@@ -68,7 +68,7 @@
                             </div>
                         </ion-col>
                         <ion-col size="4" offset="4">
-                            <ion-button size="large" [disabled]="disabled" [style.--background]="(alreadySignedUp || isInstructorForEvent) ? '#43B3C3': '#70ad47'" (click)="alreadySignedUp ?  onVerifyClicked : onButtonClick">{{getButtonText()}}</ion-button>
+                            <ion-button size="large" [disabled]="disabled" [style.--background]="(alreadySignedUp || isInstructorForEvent) ? '#43B3C3': '#70ad47'" (click)="alreadySignedUp ?  onVerifyClicked() : onButtonClick()">{{getButtonText()}}</ion-button>
 
                         </ion-col>
                     </ion-row>
