--- a/src/app/pages/event/event-page/event-page.page.html
+++ b/src/app/pages/event/event-page/event-page.page.html
@@ -59,6 +59,9 @@
                         </ion-grid>
                     </ion-card-content>
                 </ion-card>
+                <div>
+                    <app-userlist [eventId]="eventId"></app-userlist>
+                </div>
             </ion-col>
             <ion-col size="5" offset="2">
                 <ion-grid>
