--- a/src/app/pages/modals/verify-modal-user/verify-modal-user.page.html
+++ b/src/app/pages/modals/verify-modal-user/verify-modal-user.page.html
@@ -15,7 +15,7 @@
     </ion-row>
     <ion-row *ngIf="cordovaAvailable" class="ion-justify-content-center">
       <ion-text>
-        <ion-button color="primary" (click)="startNearbyBroadcast()">Verify </ion-button>
+        <ion-button [disabled]="!code" color="primary" (click)="startNearbyBroadcast()">Verify </ion-button>
       </ion-text>
     </ion-row>
   </ion-grid>
