--- a/src/app/components/club-manage/club-manage-subcriptions/club-manage-subcriptions.component.html
+++ b/src/app/components/club-manage/club-manage-subcriptions/club-manage-subcriptions.component.html
@@ -21,7 +21,12 @@
                       {{ sub.name }}
                     </ion-select-option>
                   </ion-select>
-                  <ion-icon mobileEvent="click" color="Dark" tooltip="When you have existing subscriptions and events, you need to select one of the subscriptions as price reference for future events in your club" name="help-outline"></ion-icon>
+                  <ion-icon
+                    mobileEvent="click"
+                    color="Dark"
+                    tooltip="When you have existing subscriptions and events, you need to select one of the subscriptions as price reference for future events in your club"
+                    name="help-outline"
+                  ></ion-icon>
                 </div>
               </div>
               <ion-button
