--- a/src/app/pages/club/myclubs/myclubs.page.scss
+++ b/src/app/pages/club/myclubs/myclubs.page.scss
@@ -1,13 +1,13 @@
 .auto-width {
-    width: auto;
-    font-weight:bold;
-    font-size: 20px;
+  width: auto;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .center-text {
-    text-align: center;
+  text-align: center;
 }
 
 ion-list {
-    width: 100%
+  width: 100%;
 }
