--- a/src/app/pages/club/club-list/club-list.page.html
+++ b/src/app/pages/club/club-list/club-list.page.html
@@ -1,32 +1,38 @@
-<ion-row class=" ion-margin">
-    <ion-col size-lg="6" offset-lg="3">
-        <ion-searchbar [(ngModel)]="searchQuery" (ngModelChange)="onSearch($event)" inputmode="text" animated placeholder="Search"></ion-searchbar>
-    </ion-col>
+<ion-row class="ion-margin">
+  <ion-col size-lg="6" offset-lg="3">
+    <ion-searchbar
+      [(ngModel)]="searchQuery"
+      (ngModelChange)="onSearch($event)"
+      inputmode="text"
+      animated
+      placeholder="Search"
+    ></ion-searchbar>
+  </ion-col>
 </ion-row>
 
 <ion-content>
-    <ion-grid>
-        <ion-row>
-            <ion-col size-lg="6" offset-lg="3">
-                <ion-header *ngIf="filteredClubs.length == 0 && clubs.length > 0">No clubs matching the searchquery</ion-header>
-                <ion-list lines="none" *ngFor="let club of filteredClubs">
-                    <ion-item [routerLink]="route(club.clubId)">
-                        <ion-card class="card">
-                            <ion-card-header>
-                                <ion-card-title>{{club.name.toUpperCase()}}</ion-card-title>
-                                <ion-card-subtitle>
-                                    <ion-row class="ion-justify-content-between">
-                                        <ion-label>Club: {{club.name}}</ion-label>
-                                    </ion-row>
-                                </ion-card-subtitle>
-                            </ion-card-header>
-                            <ion-card-content>
-                                <ion-label>Description: {{club.description}}</ion-label>
-                            </ion-card-content>
-                        </ion-card>
-                    </ion-item>
-                </ion-list>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-lg="6" offset-lg="3">
+        <ion-header *ngIf="filteredClubs.length == 0 && clubs.length > 0">No clubs matching the searchquery</ion-header>
+        <ion-list lines="none" *ngFor="let club of filteredClubs">
+          <ion-item [routerLink]="route(club.clubId)">
+            <ion-card class="card">
+              <ion-card-header>
+                <ion-card-title>{{club.name.toUpperCase()}}</ion-card-title>
+                <ion-card-subtitle>
+                  <ion-row class="ion-justify-content-between">
+                    <ion-label>Club: {{club.name}}</ion-label>
+                  </ion-row>
+                </ion-card-subtitle>
+              </ion-card-header>
+              <ion-card-content>
+                <ion-label>Description: {{club.description}}</ion-label>
+              </ion-card-content>
+            </ion-card>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
