--- a/src/app/pages/club/show-club/show-club.page.html
+++ b/src/app/pages/club/show-club/show-club.page.html
@@ -1,170 +1,191 @@
 <ion-content *ngIf="!isMobile; else mobile">
-    <ion-grid *ngIf="(club$ | async)?.clubByID as club" class="ion-margin">
-        <ion-row class="ion-justify-content-center headline">
+  <ion-grid *ngIf="(club$ | async)?.clubByID as club" class="ion-margin">
+    <ion-row class="ion-justify-content-center headline">
+      <ion-text>
+        <h1>{{club.name | uppercase}}</h1>
+      </ion-text>
+    </ion-row>
+    <ion-row>
+      <ion-col size="7">
+        <ion-row class="ion-justify-content-center">
+          <ion-card style="width: 100%">
+            <ion-card-header>
+              <ion-card-title>Description of club</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-card-subtitle>{{club.description}}</ion-card-subtitle>
+            </ion-card-content>
+          </ion-card>
+          <ion-list class="list" inset="true" lines="none">
+            <ion-list-header>
+              <p>Subscriptions in the club</p>
+            </ion-list-header>
+            <hr style="height: 1px; background-color: black; width: 90%" />
+            <ion-item class="substyle ion-justify-content-evenly" *ngFor=" let sup of club.clubsubscription">
+              <ion-grid>
+                <ion-card>
+                  <ion-card-header>
+                    <ion-row class="ion-justify-content-between">
+                      <ion-text>{{sup.name}}</ion-text>
+                      <ion-text>{{sup.price}} $</ion-text>
+                    </ion-row>
+                  </ion-card-header>
+                </ion-card>
+              </ion-grid>
+            </ion-item>
+          </ion-list>
+          <ion-list class="list" inset="true" lines="none">
+            <ion-list-header>
+              <p>Upcoming events in the club</p>
+            </ion-list-header>
+            <hr style="height: 1px; background-color: black; width: 90%" />
+            <ion-item
+              button
+              (click)="goToEvent(event.eventId)"
+              class="substyle ion-justify-content-evenly"
+              *ngFor=" let event of (club$ | async)?.eventsForClub; index as i "
+            >
+              <ion-grid>
+                <ion-card>
+                  <ion-card-header>
+                    <ion-row class="ion-justify-content-between">
+                      <ion-text>{{event.name}}</ion-text>
+                    </ion-row>
+                  </ion-card-header>
+                </ion-card>
+              </ion-grid>
+            </ion-item>
+          </ion-list>
+        </ion-row>
+      </ion-col>
+      <ion-col size="1 "> </ion-col>
+      <ion-col size="4 ">
+        <ion-row class="ion-justify-content-end">
+          <ion-button
+            size="large "
+            style="width: 60%"
+            [style.--background]="(currentSubscription) ? '#43B3C3': '#70ad47'"
+            [disabled]="currentSubscription || !(club$ | async)?.clubByID.clubsubscription.length"
+            (click)="showModal()"
+            >{{buttonText}}</ion-button
+          >
+        </ion-row>
+        <div class="textContainer">
+          <ion-col class="ion-text-end">
             <ion-text>
-                <h1>{{club.name | uppercase}}</h1>
+              <h2>Opening hours: Todo</h2>
             </ion-text>
-        </ion-row>
-        <ion-row>
-            <ion-col size="7">
-                <ion-row class="ion-justify-content-center">
-                    <ion-card style="width: 100%">
-                        <ion-card-header>
-                            <ion-card-title>Description of club</ion-card-title>
-                        </ion-card-header>
-                        <ion-card-content>
-                            <ion-card-subtitle>{{club.description}}</ion-card-subtitle>
-                        </ion-card-content>
-                    </ion-card>
-                    <ion-list class="list" inset="true" lines="none">
-                        <ion-list-header>
-                            <p>Subscriptions in the club</p>
-                        </ion-list-header>
-                        <hr style="height: 1px; background-color: black; width: 90%" />
-                        <ion-item class="substyle ion-justify-content-evenly" *ngFor=" let sup of club.clubsubscription">
-                            <ion-grid>
-                                <ion-card>
-                                    <ion-card-header>
-                                        <ion-row class="ion-justify-content-between">
-                                            <ion-text>{{sup.name}}</ion-text>
-                                            <ion-text>{{sup.price}} $</ion-text>
-                                        </ion-row>
-                                    </ion-card-header>
-                                </ion-card>
-                            </ion-grid>
-                        </ion-item>
-                    </ion-list>
-                    <ion-list class="list" inset="true" lines="none">
-                        <ion-list-header>
-                            <p>Upcoming events in the club</p>
-                        </ion-list-header>
-                        <hr style="height: 1px; background-color: black; width: 90% " />
-                        <ion-item button (click)="goToEvent(event.eventId)" class="substyle ion-justify-content-evenly " *ngFor=" let event of (club$ | async)?.eventsForClub; index as i ">
-                            <ion-grid>
-                                <ion-card>
-                                    <ion-card-header>
-                                        <ion-row class="ion-justify-content-between ">
-                                            <ion-text>{{event.name}}</ion-text>
-                                        </ion-row>
-                                    </ion-card-header>
-                                </ion-card>
-                            </ion-grid>
-                        </ion-item>
-                    </ion-list>
-                </ion-row>
-            </ion-col>
-            <ion-col size="1 "> </ion-col>
-            <ion-col size="4 ">
-                <ion-row class="ion-justify-content-end ">
-                    <ion-button size="large " style="width: 60%" [style.--background]="(currentSubscription) ? '#43B3C3': '#70ad47'" [disabled]="currentSubscription || !(club$ | async)?.clubByID.clubsubscription.length" (click)="showModal()">{{buttonText}}</ion-button>
-                </ion-row>
-                <div class="textContainer ">
-                    <ion-col class="ion-text-end ">
-                        <ion-text>
-                            <h2>Opening hours: Todo</h2>
-                        </ion-text>
-                    </ion-col>
-                    <ion-col class="ion-text-end ">
-                        <ion-text>
-                            <h2>Telephone: {{club.phoneNumber}}</h2>
-                        </ion-text>
-                    </ion-col>
-                    <ion-col class="ion-text-end ">
-                        <ion-text>
-                            <h2>Mail: todo.email.com</h2>
-                        </ion-text>
-                    </ion-col>
-                    <ion-col class="ion-text-end ">
-                        <ion-text>
-                            <h2>Address: {{club.address}}</h2>
-                        </ion-text>
-                    </ion-col>
-                    <ion-col>
-                        <ion-button style="width: 100%; height: 300px "> MAPS</ion-button>
-                    </ion-col>
-                </div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
+          </ion-col>
+          <ion-col class="ion-text-end">
+            <ion-text>
+              <h2>Telephone: {{club.phoneNumber}}</h2>
+            </ion-text>
+          </ion-col>
+          <ion-col class="ion-text-end">
+            <ion-text>
+              <h2>Mail: todo.email.com</h2>
+            </ion-text>
+          </ion-col>
+          <ion-col class="ion-text-end">
+            <ion-text>
+              <h2>Address: {{club.address}}</h2>
+            </ion-text>
+          </ion-col>
+          <ion-col>
+            <ion-button style="width: 100%; height: 300px"> MAPS</ion-button>
+          </ion-col>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
 
 <ng-template #mobile>
-    <ion-content class="container " *ngIf="(club$ | async)?.clubByID as club ">
-        <ion-grid>
-            <ion-row class="ion-justify-content-center ">
-                <ion-col>
-                    <ion-text class="ion-text-center ">
-                        <h2>{{club.name | uppercase}}</h2>
-                    </ion-text>
-                </ion-col>
-            </ion-row>
-            <ion-card>
-                <ion-card-header>
-                    <ion-text style="color: black "> {{club.description}} </ion-text>
-                </ion-card-header>
-            </ion-card>
-            <ion-row class="ion-justify-content-center ">
-                <ion-list class="list " inset="true " lines="none" *ngIf="club.clubsubscription.length">
-                    <ion-list-header>
-                        <p>Subscriptions in the club</p>
-                    </ion-list-header>
-                    <hr style="height: 1px; background-color: black; width: 90% " />
-                    <ion-item class="substyle ion-justify-content-evenly " *ngFor=" let sup of club.clubsubscription ">
-                        <ion-grid>
-                            <ion-row class="ion-justify-content-between ">
-                                <ion-text>{{sup.name}}</ion-text>
-                                <ion-text>{{sup.price}} $</ion-text>
-                            </ion-row>
-                        </ion-grid>
-                    </ion-item>
-                </ion-list>
-                <ion-list class="list " inset="true " lines="none" *ngIf="events.length ">
-                    <ion-list-header>
-                        <p>Upcoming events in the club</p>
-                    </ion-list-header>
-                    <hr style="height: 1px; background-color: black; width: 90% " />
-                    <ion-item button (click)="goToEvent(event.eventId)" class="substyle ion-justify-content-evenly " *ngFor="let event of  events; index as i ">
-                        <ion-grid>
-                            <ion-row class="ion-justify-content-between ">
-                                <ion-label>{{event.name}}</ion-label>
-                            </ion-row>
-                        </ion-grid>
-                    </ion-item>
-
-                </ion-list>
-            </ion-row>
-            <ion-card>
-                <ion-card-content>
-                    <ion-row class="ion-justify-content-center ">
-                        <div class="textContainer ">
-                            <ion-col class="ion-text-end ">
-                                <ion-text>
-                                    <p>Opening hours: Todo</p>
-                                </ion-text>
-                            </ion-col>
-                            <ion-col class="ion-text-end ">
-                                <ion-text>
-                                    <p>Telephone: {{club.phoneNumber}}</p>
-                                </ion-text>
-                            </ion-col>
-                            <ion-col class="ion-text-end ">
-                                <ion-text>
-                                    <p>Mail: {{club.user.email}}</p>
-                                </ion-text>
-                            </ion-col>
-                            <ion-col class="ion-text-end ">
-                                <ion-text>
-                                    <p>Address: {{club.address}}</p>
-                                </ion-text>
-                            </ion-col>
-                        </div>
-                    </ion-row>
-                </ion-card-content>
-            </ion-card>
-            <ion-col>
-                <ion-button style="width: 100%; height: 300px "> MAPS</ion-button>
-            </ion-col>
-        </ion-grid>
-    </ion-content>
-    <app-mobile-signup-component [text]="buttonText" [color]="(currentSubscription) ? '#43B3C3': '#70ad47'" [disabled]="currentSubscription || !(club$ | async)?.clubByID.clubsubscription.length" [callback]="showModal "></app-mobile-signup-component>
+  <ion-content class="container" *ngIf="(club$ | async)?.clubByID as club ">
+    <ion-grid>
+      <ion-row class="ion-justify-content-center">
+        <ion-col>
+          <ion-text class="ion-text-center">
+            <h2>{{club.name | uppercase}}</h2>
+          </ion-text>
+        </ion-col>
+      </ion-row>
+      <ion-card>
+        <ion-card-header>
+          <ion-text style="color: black"> {{club.description}} </ion-text>
+        </ion-card-header>
+      </ion-card>
+      <ion-row class="ion-justify-content-center">
+        <ion-list class="list" inset="true " lines="none" *ngIf="club.clubsubscription.length">
+          <ion-list-header>
+            <p>Subscriptions in the club</p>
+          </ion-list-header>
+          <hr style="height: 1px; background-color: black; width: 90%" />
+          <ion-item class="substyle ion-justify-content-evenly" *ngFor=" let sup of club.clubsubscription ">
+            <ion-grid>
+              <ion-row class="ion-justify-content-between">
+                <ion-text>{{sup.name}}</ion-text>
+                <ion-text>{{sup.price}} $</ion-text>
+              </ion-row>
+            </ion-grid>
+          </ion-item>
+        </ion-list>
+        <ion-list class="list" inset="true " lines="none" *ngIf="events.length ">
+          <ion-list-header>
+            <p>Upcoming events in the club</p>
+          </ion-list-header>
+          <hr style="height: 1px; background-color: black; width: 90%" />
+          <ion-item
+            button
+            (click)="goToEvent(event.eventId)"
+            class="substyle ion-justify-content-evenly"
+            *ngFor="let event of  events; index as i "
+          >
+            <ion-grid>
+              <ion-row class="ion-justify-content-between">
+                <ion-label>{{event.name}}</ion-label>
+              </ion-row>
+            </ion-grid>
+          </ion-item>
+        </ion-list>
+      </ion-row>
+      <ion-card>
+        <ion-card-content>
+          <ion-row class="ion-justify-content-center">
+            <div class="textContainer">
+              <ion-col class="ion-text-end">
+                <ion-text>
+                  <p>Opening hours: Todo</p>
+                </ion-text>
+              </ion-col>
+              <ion-col class="ion-text-end">
+                <ion-text>
+                  <p>Telephone: {{club.phoneNumber}}</p>
+                </ion-text>
+              </ion-col>
+              <ion-col class="ion-text-end">
+                <ion-text>
+                  <p>Mail: {{club.user.email}}</p>
+                </ion-text>
+              </ion-col>
+              <ion-col class="ion-text-end">
+                <ion-text>
+                  <p>Address: {{club.address}}</p>
+                </ion-text>
+              </ion-col>
+            </div>
+          </ion-row>
+        </ion-card-content>
+      </ion-card>
+      <ion-col>
+        <ion-button style="width: 100%; height: 300px"> MAPS</ion-button>
+      </ion-col>
+    </ion-grid>
+  </ion-content>
+  <app-mobile-signup-component
+    [text]="buttonText"
+    [color]="(currentSubscription) ? '#43B3C3': '#70ad47'"
+    [disabled]="currentSubscription || !(club$ | async)?.clubByID.clubsubscription.length"
+    [callback]="showModal "
+  ></app-mobile-signup-component>
 </ng-template>
