--- a/src/app/pages/event/event-page/event-page.page.html
+++ b/src/app/pages/event/event-page/event-page.page.html
@@ -1,133 +1,134 @@
 <ion-content *ngIf="!isMobile else mobile">
-    <ion-grid class="ion-margin" *ngIf="(event$ | async)?.getEvent as event">
-        <ion-col size="2" offset="5">
-            <ion-row class="ion-justify-content-center">
-                <ion-label>
-                    <h1 class="heading">
-                        {{event.name}}
-                    </h1>
-                </ion-label>
+  <ion-grid class="ion-margin" *ngIf="(event$ | async)?.getEvent as event">
+    <ion-col size="2" offset="5">
+      <ion-row class="ion-justify-content-center">
+        <ion-label>
+          <h1 class="heading">{{event.name}}</h1>
+        </ion-label>
+      </ion-row>
+    </ion-col>
+    <ion-row *ngIf="(clubInfo$ | async)?.clubByID as clubInfo">
+      <ion-col size="5">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>Start: {{event.startTime | date: 'short'}}</ion-card-title>
+            <ion-card-title>End: {{event.endTime | date:'short'}}</ion-card-title>
+            <ion-card-subtitle>Club: {{clubInfo.name}}</ion-card-subtitle>
+          </ion-card-header>
+          <ion-card-content *ngFor="let instructor of event.instructorForEvents">
+            <ion-label> Instructors: {{instructor.user.name}} </ion-label>
+          </ion-card-content>
+        </ion-card>
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>Description</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-label> {{event.description}} </ion-label>
+          </ion-card-content>
+        </ion-card>
+        <ion-card>
+          <ion-card-content>
+            <ion-grid>
+              <ion-row>
+                <ion-col size="4">
+                  <ion-item>
+                    <ion-img src="../../../../assets/img/start.jpg"> </ion-img>
+                  </ion-item>
+                </ion-col>
+                <ion-col size="4">
+                  <ion-item>
+                    <ion-img src="../../../../assets/img/start.jpg"> </ion-img>
+                  </ion-item>
+                </ion-col>
+                <ion-col>
+                  <ion-item size="4">
+                    <ion-img src="../../../../assets/img/start.jpg"> </ion-img>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card-content>
+        </ion-card>
+        <div>
+          <app-userlist [eventId]="eventId"></app-userlist>
+        </div>
+      </ion-col>
+      <ion-col size="5" offset="2">
+        <ion-grid>
+          <ion-row class="ion-align-items-center">
+            <ion-col size="4" class="ion-text-center ion-text">
+              <div class="boxed" [style.color]="color" [style.fontSize]>{{price}}</div>
+            </ion-col>
+            <ion-col size="4" offset="4">
+              <ion-button
+                size="large"
+                [disabled]="disabled"
+                [style.--background]="(alreadySignedUp || isInstructorForEvent) ? '#43B3C3': '#70ad47'"
+                (click)="alreadySignedUp ?  onVerifyClicked() : onButtonClick()"
+                >{{getButtonText()}}</ion-button
+              >
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-button style="width: 100%; height: 300px">MAPS</ion-button>
+            <ion-row class="ion-justify-content-center ion-margin">
+              <h1>Address: {{event.locations[0]?.room.roomId ? event.locations[0].room.name : clubInfo.address}}</h1>
             </ion-row>
-        </ion-col>
-        <ion-row *ngIf="(clubInfo$ | async)?.clubByID as clubInfo">
-            <ion-col size="5">
-                <ion-card>
-                    <ion-card-header>
-                        <ion-card-title>Start: {{event.startTime | date: 'short'}}</ion-card-title>
-                        <ion-card-title>End: {{event.endTime | date:'short'}}</ion-card-title>
-                        <ion-card-subtitle>Club: {{clubInfo.name}}</ion-card-subtitle>
-                    </ion-card-header>
-                    <ion-card-content *ngFor="let instructor of event.instructorForEvents">
-                        <ion-label>
-                            Instructors: {{instructor.user.name}}
-                        </ion-label>
-                    </ion-card-content>
-                </ion-card>
-                <ion-card>
-                    <ion-card-header>
-                        <ion-card-title>Description</ion-card-title>
-                    </ion-card-header>
-                    <ion-card-content>
-                        <ion-label>
-                            {{event.description}}
-                        </ion-label>
-                    </ion-card-content>
-                </ion-card>
-                <ion-card>
-                    <ion-card-content>
-                        <ion-grid>
-                            <ion-row>
-                                <ion-col size="4">
-                                    <ion-item>
-                                        <ion-img src="../../../../assets/img/start.jpg">
-                                        </ion-img>
-                                    </ion-item>
-                                </ion-col>
-                                <ion-col size="4">
-                                    <ion-item>
-                                        <ion-img src="../../../../assets/img/start.jpg">
-                                        </ion-img>
-                                    </ion-item>
-                                </ion-col>
-                                <ion-col>
-                                    <ion-item size="4">
-                                        <ion-img src="../../../../assets/img/start.jpg">
-                                        </ion-img>
-                                    </ion-item>
-                                </ion-col>
-                            </ion-row>
-                        </ion-grid>
-                    </ion-card-content>
-                </ion-card>
-                <div>
-                    <app-userlist [eventId]="eventId"></app-userlist>
-                </div>
-            </ion-col>
-            <ion-col size="5" offset="2">
-                <ion-grid>
-                    <ion-row class="ion-align-items-center">
-                        <ion-col size="4" class="ion-text-center ion-text">
-                            <div class="boxed" [style.color]="color" [style.fontSize]> {{price}}
-                            </div>
-                        </ion-col>
-                        <ion-col size="4" offset="4">
-                            <ion-button size="large" [disabled]="disabled" [style.--background]="(alreadySignedUp || isInstructorForEvent) ? '#43B3C3': '#70ad47'" (click)="alreadySignedUp ?  onVerifyClicked() : onButtonClick()">{{getButtonText()}}</ion-button>
-
-                        </ion-col>
-                    </ion-row>
-                </ion-grid>
-                <ion-row>
-                    <ion-col>
-                        <ion-button style="width: 100%; height: 300px; ">MAPS</ion-button>
-                        <ion-row class="ion-justify-content-center ion-margin">
-                            <h1>Address: {{event.locations[0]?.room.roomId ? event.locations[0].room.name : clubInfo.address}}
-                            </h1>
-                        </ion-row>
-                    </ion-col>
-                </ion-row>
-            </ion-col>
+          </ion-col>
         </ion-row>
-    </ion-grid>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
 
 <ng-template #mobile>
-    <ion-content *ngIf="(event$ | async)?.getEvent as event ">
-        <ion-card *ngIf="(clubInfo$ | async)?.clubByID as clubInfo ">
-            <ion-card-header>
-                <ion-card-title> {{event.name}} </ion-card-title>
-                <ion-card-subtitle> From {{event.startTime | date:'short'}} To {{event.endTime | date:'short'}} </ion-card-subtitle>
-                <ion-card-subtitle> {{price}} </ion-card-subtitle>
-                <ion-card-subtitle> Club: {{clubInfo.name}} </ion-card-subtitle>
-                <ion-card-subtitle *ngFor="let instructor of event.instructorForEvents ">
-                    {{instructor.user.name}}
-                </ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content> {{event.description}} </ion-card-content>
-        </ion-card>
-        <ion-card>
-            <ion-card-content>
-                <ion-grid>
-                    <ion-row>
-                        <ion-col size="4 ">
-                            <ion-img src="../../../../assets/img/start.jpg "> </ion-img>
-                        </ion-col>
-                        <ion-col size="4 ">
-                            <ion-img src="../../../../assets/img/start.jpg "> </ion-img>
-                        </ion-col>
-                        <ion-col size="4 ">
-                            <ion-img src="../../../../assets/img/start.jpg "> </ion-img>
-                        </ion-col>
-                    </ion-row>
-                </ion-grid>
-            </ion-card-content>
-        </ion-card>
-        <ion-card>
-            <ion-card-content>
-                <ion-button style="width: 100%; height: 300px">Maps</ion-button>
-            </ion-card-content>
-        </ion-card>
-    </ion-content>
+  <ion-content *ngIf="(event$ | async)?.getEvent as event ">
+    <ion-card *ngIf="(clubInfo$ | async)?.clubByID as clubInfo ">
+      <ion-card-header>
+        <ion-card-title> {{event.name}} </ion-card-title>
+        <ion-card-subtitle>
+          From {{event.startTime | date:'short'}} To {{event.endTime | date:'short'}}
+        </ion-card-subtitle>
+        <ion-card-subtitle> {{price}} </ion-card-subtitle>
+        <ion-card-subtitle> Club: {{clubInfo.name}} </ion-card-subtitle>
+        <ion-card-subtitle *ngFor="let instructor of event.instructorForEvents ">
+          {{instructor.user.name}}
+        </ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content> {{event.description}} </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-content>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="4 ">
+              <ion-img src="../../../../assets/img/start.jpg "> </ion-img>
+            </ion-col>
+            <ion-col size="4 ">
+              <ion-img src="../../../../assets/img/start.jpg "> </ion-img>
+            </ion-col>
+            <ion-col size="4 ">
+              <ion-img src="../../../../assets/img/start.jpg "> </ion-img>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-content>
+        <ion-button style="width: 100%; height: 300px">Maps</ion-button>
+      </ion-card-content>
+    </ion-card>
+  </ion-content>
 
-    <app-mobile-signup-component [text]="getButtonText()" [disabled]="disabled" [color]="(alreadySignedUp || isInstructorForEvent) ? '#43B3C3': '#70ad47'" [callback]="alreadySignedUp ?  onVerifyClicked : onButtonClick">
-    </app-mobile-signup-component>
+  <app-mobile-signup-component
+    [text]="getButtonText()"
+    [disabled]="disabled"
+    [color]="(alreadySignedUp || isInstructorForEvent) ? '#43B3C3': '#70ad47'"
+    [callback]="alreadySignedUp ?  onVerifyClicked : onButtonClick"
+  >
+  </app-mobile-signup-component>
 </ng-template>
