--- a/src/app/pages/modals/payment-modal/payment-modal.page.html
+++ b/src/app/pages/modals/payment-modal/payment-modal.page.html
@@ -8,7 +8,7 @@
     </ion-toolbar>
   </ion-header>
   <ion-list class="ion-margin">
-    <ion-radio-group [(ngModel)]="clubsubscriptionId">
+    <ion-radio-group [(ngModel)]="clubSubscriptionId">
       <ion-item *ngFor="let sub of clubSubscriptions$ | async">
         <ion-label>{{sub.name}}</ion-label>
         <div class="ion-margin">
@@ -21,6 +21,10 @@
 </ion-content>
 
 <div style="position: fixed; bottom: 0px; width: 100%">
-  <app-stripe-elements [dismissModal]="dissmiss" [subscriptionId]="clubsubscriptionId" [amount]="getAmount()"
-    [description]="getName()"></app-stripe-elements>
+  <app-stripe-elements
+    [dismissModal]="dissmiss"
+    [subscriptionId]="clubSubscriptionId"
+    [amount]="getAmount()"
+    [description]="getName()"
+  ></app-stripe-elements>
 </div>
