--- a/src/app/pages/auth/start/start.page.html
+++ b/src/app/pages/auth/start/start.page.html
@@ -10,9 +10,9 @@
   </ion-header>
 
   <ion-grid class="ion-margin">
-    <ion-row class="ion-justify-content-between"> </ion-row>
     <ion-row class="ion-justify-content-center ion-margin">
-      <img src="{{gifURL}}" />
+      <img style="border-radius: 50%; max-width: 30%;"
+        src="https://cdn5.vectorstock.com/i/1000x1000/73/59/teamwork-meeting-people-logo-vector-1787359.jpg" />
     </ion-row>
     <ion-row class="ion-justify-content-center">
       <ion-button routerLink="/signup" size="large" fill="solid" color="dark">Sign up now!</ion-button>
